--- a/html/index.html
+++ b/html/index.html
@@ -98,10 +98,10 @@
           </li>
           <li>Optimizing Patterns
               <ul>
+                  <li><a href="dirty-flag.html">Dirty Flag</a></li>
                   <li><a href="object-pool.html">Object Pool</a></li>
                   <li><a href="spatial-partition.html">Spatial Partition</a></li>
                   <li>Structure of Arrays</li>
-                  <li>Dirty Bits</li>
               </ul>
           </li>
       </ul>
